Updated test to pass 96% of test cases